@@ -10,6 +10,7 @@ Fixed bugs
 - check variable cancellation in SCIPvarAddVlb() and SCIPvarAddVub() to avert wrong infeasibility
 - SCIPfreeReoptSolve now also clears the partial solutions
 - fixed bug in calculation of "fractionality score" for spatial branching candidates in cons_nonlinear
+- fixed bug with installing symmetry dialog in sub-SCIPs
 
 Unit tests
 ----------
